--- a/app/src/main/res/layout/activity_plat_user.xml
+++ b/app/src/main/res/layout/activity_plat_user.xml
@@ -6,10 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".plat_user">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/users_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello User"
-        android:textSize="50dp"/>
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
