--- a/app/src/main/res/layout/activity_tableau_ia.xml
+++ b/app/src/main/res/layout/activity_tableau_ia.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".tableau_ia">
 
+    <LinearLayout
+        android:id="@+id/users_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button_save_abs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/submit"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="667dp"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
