--- a/app/src/main/res/layout/user_item_layout.xml
+++ b/app/src/main/res/layout/user_item_layout.xml
@@ -11,12 +11,14 @@
         android:orientation="horizontal"
         tools:ignore="MissingConstraints">
 
+
         <TextView
             android:id="@+id/user_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView" />
+
 
         <Button
             android:id="@+id/decrement_btn"
@@ -48,6 +50,13 @@
             android:gravity="center"
             android:text="+"
             android:textSize="40sp" />
+
+        <TextView
+            android:id="@+id/total_abs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
 
 
     </LinearLayout>
